# Olcia

./: .cursorignore  .dockerignore  .env.example  .gitignore  CONFIG.md  Dockerfile  EXAMPLES.md  README.md  compose.yaml  pyproject.toml  requirements.txt
.cursor/: LICENSE  README.md  SETUP.md  mcp.json  pyproject.toml
.cursor/cursor_prompts/: 00_bootstrap.md  10_feature.md  20_refactor.md  30_tests.md
.cursor/docs/: NEW_TOOLS.md
.cursor/knowledge/: Frontend Best Practices Research 2024-2025.md  e2e.md  e2e_sample.md  sample_config.json  sample_documentation.md
.cursor/logs/: mcp_status.md
.cursor/mcp/: memory.py  moe.py  orchestrator.py  server.py
.cursor/memory/: mistakes.jsonl  reflexion.md
.cursor/prompts/: apply.md  plan.md  rag.md  tdd.md  verify.md
.cursor/prompts/experts/: coder.md  planner.md  rag.md  refactor.md  security.md  tester.md
.cursor/rag/: config.yaml  ingest.py
.cursor/rules/: agent.mdc  moe.yml  olcia-agent.mdc  reasoning.yml
.cursor/scripts/: auto_ingest.ps1  bootstrap.ps1  e2e.ps1
.cursor/tests/: test_memory.py  test_orchestrator.py  test_rag.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactoring.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  quality.yml
.trash/knowledge_test/: e2e_sample.md
cursor_prompts/: 00_bootstrap.md  20_refactor.md  30_tests.md
mcp/: memory.py  orchestrator.py  server.py
rag/: ingest.py
scripts/: bootstrap.ps1  ci_e2e_test.sh  e2e.bat
tests/: test_orchestrator.py  test_rag.py
tests/e2e/: test_jsonrpc_e2e.py
